finishing the last touches until I freak out and change a buch of stuff again

--- a/index.html
+++ b/index.html
@@ -1,26 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-  <link rel="stylesheet" href="style.css">
-  <title>Developer-Profile-Generator</title>
-</head>
-
-<body>
-  <div class="jumbotron jumbotron-fluid">
-    <div class="container">
-      <h1 class="display-4">Hi! My name is Remy</h1>
-      <p class="lead">I am from Seattle.</p>
-      <h3>Example heading <span class="badge badge-secondary">Contact Me</span></h3>
-      <ul class="list-group">
-        <li class="list-group-item">My GitHub username is remyguts</li>
-        <li class="list-group-item">LinkedIn: blahhhh</li>
-      </ul>
+  <html lang="en">
+  
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+  
+    <title>Document</title>
+  </head>
+  
+  <body id="yo">
+    <div class="jumbotron jumbotron-fluid" id="this">
+      <div class="container" id="that">
+        <h1 class="display-4"> remyguts</h1>
+        <img src='https://avatars2.githubusercontent.com/u/56744605?v=4' id="mage">
+        <p class="lead">I am from Seattle.</p>
+        <p> My name is Remy Guts and I'm an aspiring developer.  </p>
+        <ul class="list-group">
+          <li class="list-group-item" id="homie"><a href="https://github.com/remyguts"> </a>My GitHub </li>
+           <li class="list-group-item" id="homie"> LinkedIn:><a
+                href="https://www.linkedin.com/in/jeremy-guts-32133b177/">Linkedin</a>
+          </li>
+          <li class="list-group-item" id="homie"> Number of Followers:  1 </li>
+          <li class="list-group-item" id="homie"> Number of Repos: 13 </li>
+          <li class="list-group-item" id="homie"> Pages I Follow:1</li>
+          <li class="list-group-item" id="homie"><a
+              href="https://api.github.com/users/remyguts/starred{/owner}{/repo}"></a>Starred
+            Repos </li>
+        </ul>
+      </div>
     </div>
-  </div>
-</body>
-
-</html>
+  </body>
+  
+  </html>
+  
